# agentbnb

./: .dockerignore  .env.example  .gitignore  .npmignore  ADR-019-CHANNEL-PLUGIN-SPEC.md  AGENT-NATIVE-PROTOCOL.md  AGENT-NATIVE-PROTOCOL2.md  AGENTS.md  AgentBnB-Cross-Platform-Strategy-v1.docx  AgentBnB-Engineer-QA.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CREDIT-POLICY-ZH.md  CREDIT-POLICY.md  DOC1-AGENTBNB-GENESIS-DEV-PLAN.md  DOC2-OPENCLAW-BOT-IMPLEMENTATION.md  Dockerfile  ECOSYSTEM-COMPAT.md  IDENTITY-MODEL.md  LICENSE  MANAGED_AGENTS.md  README.md  SECURITY.md  V8-IMPLEMENTATION-PLAN.md  agentbnb-launch-strategy.md  architecture-report-for-claude-code.md  claude-code-briefing.md  conductor.md  docker-entrypoint.sh  elevenlabs-tts-card.json  eslint.config.js  fly.toml  hub-discovery-upgrade.md  hub-docs-openclaw-guide.md  openclaw.plugin.json  package.json  pnpm-lock.yaml  public-launch-requirements.md  setup.sh  (+8 more)
.claude-plugin/: marketplace.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  (+4 more)
hermes-plugin/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  RELEASE.md  plugin.yaml  pyproject.toml
hermes-plugin/agentbnb_plugin/: __init__.py  adapter.py  commands.py  hub_client.py  identity.py  memory_hook.py  plugin_api.py  rental_md_loader.py  subagent_runner.py
hermes-plugin/examples/: README.md  RENTAL.md  coding-agent.RENTAL.md  design-agent.RENTAL.md  research-agent.RENTAL.md
hermes-plugin/tests/: test_adapter.py  test_hub_client.py  test_identity.py  test_rental_md_loader.py  test_subagent_runner.py
(+932 files in other folders)
